--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_height="130dp"
+    android:background="@drawable/card_background"
+    android:elevation="4dp"
+    android:layout_margin="8dp"
+    android:clipChildren="false"
+    android:clickable="true"
+    android:focusable="true"
+    android:orientation="horizontal"
+    android:foreground="?android:attr/selectableItemBackground">
 
-    <ImageView
-        android:id="@+id/tourImage"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/tour_pic"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/default_image"
-        android:scaleType="centerCrop"/>
+        android:layout_height="120dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:src="@drawable/nature2"
+        android:transitionName="@string/transition_tour_image"
+        />
 
-    <TextView
-        android:id="@+id/tourName"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="8dp"
         android:layout_height="wrap_content"
-        android:text="Tour Name"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_marginTop="8dp"/>
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tourDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tour Description"
-        android:layout_marginTop="4dp"/>
+        <TextView
+            android:id="@+id/tourName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tour_name"
+            android:fontFamily="@font/valencia"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:layout_marginTop="8dp"/>
+
+        <TextView
+            android:id="@+id/tourDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tour_description"
+            android:layout_marginTop="4dp"/>
+    </LinearLayout>
 </LinearLayout>
