--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF" /> <!-- White background -->
     <corners android:radius="12dp" /> <!-- Adjust the radius to your preference for rounded corners -->
-    <gradient
-        android:angle="90"
-        android:startColor="#9AB4EF"
-        android:endColor="#4E46"/>
+    <stroke
+        android:color="#000000"
+        android:width="0.6dp" />
 </shape>
