--- a/app/src/main/res/layout/fragment_route_list.xml
+++ b/app/src/main/res/layout/fragment_route_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RouteListFragment">
+    tools:context=".fragment.RouteListFragment">
 
     <ListView
         android:id="@+id/listview"
