User profile updated

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -2,7 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="viewModel"
             type="com.example.projektmunka.viewModel.ProfileViewModel" />
@@ -14,30 +16,20 @@
         android:padding="16dp"
         tools:context=".ProfileActivity">
 
-        <!-- Profile Picture and Name -->
+        <!-- CardView for User Data -->
         <RelativeLayout
             android:id="@+id/profileHeader"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingBottom="16dp">
+            android:layout_width="395dp"
+            android:layout_height="145dp"
+            android:padding="16dp">
 
+            <!-- Centered CircleImageView -->
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/ivUserPhoto"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/default_profile_image"
-                android:layout_centerVertical="true"/>
-
-            <TextView
-                android:id="@+id/tvUserName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="18sp"
-                android:layout_below="@id/ivUserPhoto"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="8dp"/>
+                android:layout_centerInParent="true"
+                android:src="@drawable/nature1" />
         </RelativeLayout>
 
         <androidx.cardview.widget.CardView
@@ -45,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/profileHeader"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             app:cardCornerRadius="12dp"
@@ -60,6 +52,7 @@
                 <!-- User Data Fields -->
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                    android:id="@+id/til_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp">
@@ -69,9 +62,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edit_text_bg"
-                        android:textSize="15dp"
+                        android:inputType="text"
                         android:hint="First Name"
-                        android:text="@={viewModel.firstName}"/>
+                        android:text="@={viewModel.firstName}"
+                        android:textSize="15dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -85,9 +79,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edit_text_bg"
-                        android:textSize="15dp"
                         android:hint="Last Name"
-                        android:text="@={viewModel.lastName}"/>
+                        android:text="@={viewModel.lastName}"
+                        android:textSize="15dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -101,9 +95,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edit_text_bg"
-                        android:textSize="15dp"
                         android:hint="Email"
-                        android:text="@={viewModel.email}"/>
+                        android:text="@={viewModel.email}"
+                        android:textSize="15dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -117,9 +111,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edit_text_bg"
-                        android:textSize="15dp"
                         android:hint="Age"
-                        android:text="@={viewModel.age}"/>
+                        android:text="@={viewModel.age}"
+                        android:textSize="15dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -133,9 +127,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edit_text_bg"
-                        android:textSize="15dp"
                         android:hint="Weight"
-                        android:text="@={viewModel.weight}"/>
+                        android:text="@={viewModel.weight}"
+                        android:textSize="15dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -149,25 +143,26 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edit_text_bg"
-                        android:textSize="17dp"
                         android:hint="Gender"
-                        android:text="@={viewModel.gender}"/>
+                        android:text="@={viewModel.gender}"
+                        android:textSize="17dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+
         <!-- Submit Button -->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSubmit"
             android:layout_width="100dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/personalInfoCard"
             android:layout_height="35dp"
+            android:layout_below="@id/personalInfoCard"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="18dp"
             android:background="@drawable/button2_bg"
+            android:text="Submit"
             android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:text="Submit"/>
+            android:textColor="@color/white" />
     </RelativeLayout>
 </layout>
