--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -31,5 +31,16 @@
                 android:layout_gravity="center|top"/>
         </FrameLayout>
 
+    <!-- Round Button -->
+    <ImageButton
+        android:id="@+id/roundButton"
+        android:layout_width="53dp"
+        android:layout_height="53dp"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="13dp"
+        android:background="@drawable/button2_bg"
+        android:src="@drawable/outline_person_add_alt_1_24"/>
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
