--- a/app/src/main/res/layout/fragment_route_detail.xml
+++ b/app/src/main/res/layout/fragment_route_detail.xml
@@ -38,18 +38,14 @@
 
     <Button
         android:id="@+id/startButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
         android:text="Start"
         android:layout_below="@+id/tourDescriptionDetail"
+        android:textColor="@color/white"
+        android:background="@drawable/button2_bg"
+        android:textAllCaps="false"
         android:layout_marginTop="60dp"
         android:layout_centerHorizontal="true"/>
-
-    <Button
-        android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        />
 
 </RelativeLayout>
