--- a/app/src/main/res/layout/nearby_user_list_item.xml
+++ b/app/src/main/res/layout/nearby_user_list_item.xml
@@ -5,7 +5,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/textViewUsername"
+        android:id="@+id/text_view_first_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
@@ -23,7 +23,7 @@
         android:textSize="16sp"
         android:text="@string/age"
         android:textColor="@android:color/darker_gray"
-        android:layout_below="@id/textViewUsername"
+        android:layout_below="@id/text_view_first_name"
         android:layout_alignParentStart="true"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"/>
@@ -35,10 +35,19 @@
         android:textSize="16sp"
         android:text="@string/gender"
         android:textColor="@android:color/darker_gray"
-        android:layout_below="@id/textViewUsername"
+        android:layout_below="@id/text_view_first_name"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="4dp"/>
 
-    <!-- Add more TextViews or other views for additional user data -->
+    <TextView
+        android:id="@+id/textViewDistance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="@string/distance"
+        android:textColor="@android:color/darker_gray"
+        android:layout_below="@id/textViewGender"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="4dp"/>
 
 </RelativeLayout>
